# appshots

./: .gitignore  CONTRIBUTING.md  README.md  appshots-swift-mods.swift  appshots.yaml.example  pyproject.toml
appshots/: __init__.py  ai_analyzer.py  ai_init.py  capture.py  cli.py  config.py  explorer.py  hybrid.py  init_config.py  overlay.py  resize.py  validate.py  xctest_capture.py
test-data/: questions.json
